2006-10-26 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Added: Hooks in the recipient lists (cmd_displayImport and doImport)

2006-10-26 Thorsten Kahler <thorsten.kahler@dkd.de>
	* Fixed: delete lock file if DB connect failed

2007-10-16 Ivan Kartolo <ivan.kartolo@dkd.de>
	* added: Imported tt_address can be assigned to categories and have HTML-flag by default

2007-10-11 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fixed bug #6484: HTML parameter set in configuration is not applied
	* Fixed bug #5812: remove white spaces in recipient's name

2007-09-19 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fixed bug #5413: problem by fetching plaintext

2007-09-13 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fix bug #4661: convert the charset of the USER markers
	* Fix bug #6297: trimming the "name" field before set it as recipient

2007-08-05 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fix bug #6026: in plaintext base URL is not shown if there's no image
	* Fix bug #6027: corrected JOIN statement in tx_directmail_static::getIdList
	* added: back button in the send wizard ( request: #6294)

2007-08-05 Ivan Kartolo <ivan.kartolo@dkd.de>
	* added: changing between modules doesn't need to choose SysFolder again

2007-08-05 Ivan Kartolo <ivan.kartolo@dkd.de>
	* fixed: option for removing all recepients records before importing
	* fixed: wrong field name in the mailer engine module
	* added: added some authentification libraries in cron script, might be used by other extensions

2007-07-23 Ivan Kartolo <ivan.kartolo@dkd.de>
	* upload to typo3xdev

2007-06-17 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Version 2.5.1
	* Fixed bug: Fatal error function getCsvValues in class.tx_directmail_dmail.php
	* Static functions are put in a static class.

2007-02-26 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Version 2.5.0
	* Folder structure is changed
	* New module structure
	* Better GUI
	* Improved version based on 2.2.0

2006-11-22 Thorsten Kahler <thorsten.kahler@dkd.de>
	* Added option to disable manual invocation of mailer engine