@@ -22,3 +22,24 @@ useDeferMode = 0
   # cat=basic/enable; type=boolean; label=Enable plain text rendering of News: If set, a script will be enabled to render News (tt_news records) in plain text content of email messages.
 enablePlainTextNews = 1
 
+  # cat=basic/enable; type=boolean; label=Enable Sending through SMTP: Send all emails not through sendmail but through an external SMTP account (requires PEAR::Mail to be installed on the system)
+SmtpEnabled = 0
+
+  # cat=basic/enable; type=string; label=SMTP host: Name or IP of the SMTP host, only used when sending through SMTP is enabled (see above)
+SmtpHost = localhost
+
+  # cat=basic/enable; type=int+; label=SMTP port: Port for the SMTP protocol of the SMTP host, only used when sending through SMTP is enabled (see above)
+SmtpPort = 25
+
+  # cat=basic/enable; type=boolean; label=SMTP authentication: Activate if your SMTP account needs Authentication, only used when sending through SMTP is enabled (see above)
+SmtpAuth = 0
+
+  # cat=basic/enable; type=string; label=SMTP username: Use it if your SMTP account needs a authentication, only used when sending through SMTP is enabled (see above)
+SmtpUser = 
+
+  # cat=basic/enable; type=string; label=SMTP password: Use it if your SMTP account needs a authentication, only used when sending through SMTP is enabled (see above)
+SmtpPassword = 
+
+  # cat=basic/enable; type=boolean; label=SMTP persistent connection: Activate if you want to use a persistent connection while sending direct mails, only used when sending through SMTP is enabled (see above)
+SmtpPersistent = 0
+
